mini-erp-frontend/src/views/MachineRealtimeView.vue mini-erp-frontend/src/router/index.js mini-erp-frontend/src/views/HomeView.vue mini-erp-frontend/package.json mini-erp-frontend/package-lock.json mini-erp-backend/src/main/resources/application.properties mini-erp-backend/src/main/java/com/example/mini_erp/service/MachineMonitorService.java mini-erp-backend/src/main/java/com/example/mini_erp/repository/MachineDataRepository.java mini-erp-backend/src/main/java/com/example/mini_erp/entity/MachineData.java mini-erp-backend/src/main/java/com/example/mini_erp/dto/MachineRealtimeDTO.java mini-erp-backend/src/main/java/com/example/mini_erp/controller/MachineMonitorController.java mini-erp-backend/src/main/java/com/example/mini_erp/config/RedisConfig.java mini-erp-backend/src/main/java/com/example/mini_erp/config/MqttConfig.java mini-erp-backend/src/main/java/com/example/mini_erp/MiniErpApplication.java mini-erp-backend/pom.xml mini-erp-backend/src/main/java/com/example/mini_erp/config/WebSocketConfig.java README.md

--- a/mini-erp-backend/pom.xml
+++ b/mini-erp-backend/pom.xml
@@ -79,6 +79,38 @@
     <version>0.11.5</version>
     <scope>runtime</scope>
 </dependency>
+<!-- 在 pom.xml 的 <dependencies> 區塊內新增以下依賴 -->
+
+<!-- MQTT Client -->
+<dependency>
+    <groupId>org.eclipse.paho</groupId>
+    <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+    <version>1.2.5</version>
+</dependency>
+
+<!-- Spring WebSocket -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-websocket</artifactId>
+</dependency>
+
+<!-- Redis -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-redis</artifactId>
+</dependency>
+
+<!-- Jackson for JSON -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+</dependency>
+
+<!-- Spring Integration MQTT (可選，更高級的 MQTT 整合) -->
+<dependency>
+    <groupId>org.springframework.integration</groupId>
+    <artifactId>spring-integration-mqtt</artifactId>
+</dependency>
 
 </dependencies>
 
