--- a/mini-erp-backend/src/main/resources/application.properties
+++ b/mini-erp-backend/src/main/resources/application.properties
@@ -14,3 +14,24 @@ spring.jpa.hibernate.ddl-auto=validate
 
 server.port=8083
 
+# MQTT Configuration
+mqtt.broker.url=tcp://localhost:1883
+mqtt.client.id=mini-erp-backend
+mqtt.username=
+mqtt.password=
+mqtt.topic=machine/data/#
+
+# Redis Configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.timeout=60000
+
+# WebSocket Configuration
+websocket.endpoint=/ws
+websocket.topic=/topic/machine-data
+
+# Machine Monitor Configuration
+machine.monitor.save-interval=60000
+machine.monitor.temperature.warning=70.0
+machine.monitor.temperature.critical=90.0
