--- a/mini-erp-frontend/package.json
+++ b/mini-erp-frontend/package.json
@@ -14,10 +14,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.2.1",
     "axios": "^1.12.2",
     "element-plus": "^2.11.5",
     "file-saver": "^2.0.5",
     "pinia": "^3.0.3",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
     "xlsx": "^0.18.5"
