--- a/mini-erp-frontend/package.json
+++ b/mini-erp-frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.12.2",
     "element-plus": "^2.11.5",
     "file-saver": "^2.0.5",
+    "global": "^4.4.0",
     "pinia": "^3.0.3",
     "sockjs-client": "^1.6.1",
     "vue": "^3.5.22",
